--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ultra Zprávy</title>
+    <!-- Link to the favicon.ico -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Your CSS styles remain unchanged -->
     <style>
         body {
             font-family: 'Dosis', sans-serif;
