--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
             border-top: 1px solid #ccc;
         }
     </style>
+    <!-- Discord Embed metadata -->
+    <meta property="og:title" content="Ultra Zprávy">
+    <meta property="og:description" content="Všechny zprávy">
+    <meta property="og:image" content="https://myblogsy.github.io/cdn/icons/iconembed.png">
 </head>
 <body>
 
