--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </style>
     <!-- Discord Embed metadata -->
     <meta property="og:title" content="Ultra Zprávy">
-    <meta property="og:description" content="Všechny zprávy">
+    <meta property="og:description" content="Všechny Dnešní Populární zprávy v Prostějově!">
     <meta property="og:image" content="https://myblogsy.github.io/cdn/icons/iconembed.png">
 </head>
 <body>
