--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         .header-content {
             position: relative;
             z-index: 1; /* Above the blurred background */
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add a black outline to the text */
         }
         .container {
             max-width: 800px;
@@ -99,11 +100,20 @@
             border: none;
             border-top: 1px solid #ccc;
         }
+
+        /* Media query for mobile devices */
+        @media screen and (max-width: 600px) {
+            header {
+                padding: 10px; /* Reduce padding */
+            }
+            .container {
+                padding: 0 10px; /* Reduce padding */
+            }
+            .post-image {
+                flex: 0 0 120px; /* Reduce image width */
+            }
+        }
     </style>
-    <!-- Discord Embed metadata -->
-    <meta property="og:title" content="Ultra Zprávy">
-    <meta property="og:description" content="Všechny Dnešní Populární zprávy v Prostějově!">
-    <meta property="og:image" content="https://myblogsy.github.io/cdn/icons/iconembed.png">
 </head>
 <body>
 
