--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
             }
         }
     </style>
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Ultra Zprávy">
+    <meta property="og:description" content="Dnešní Ultra Zprávy V Prostějově">
+    <meta property="og:image" content="https://cdn/icons/iconembed.png">
 </head>
 <body>
 
