--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Ultra Zprávy">
     <meta property="og:description" content="Dnešní Ultra Zprávy V Prostějově">
-    <meta property="og:image" content="https://cdn/icons/iconembed.png">
+    <meta property="og:image" content="https://myblogsy.github.io/cdn/icons/iconembed.png">
 </head>
 <body>
 
