--- a/cdn/index.html
+++ b/cdn/index.html
@@ -7,8 +7,19 @@
 </head>
 <body>
     <h1>File Browser</h1>
-    <div>
-        <?php include 'index.php'; ?>
+    <div id="file-browser">
+        <!-- PHP script will be loaded here -->
     </div>
+
+    <script>
+        // Fetch the PHP script using JavaScript
+        fetch('index.php')
+            .then(response => response.text())
+            .then(data => {
+                // Display the PHP script within the #file-browser div
+                document.getElementById('file-browser').innerHTML = '<pre>' + data + '</pre>';
+            })
+            .catch(error => console.error('Error fetching PHP script:', error));
+    </script>
 </body>
 </html>
