--- a/Maniak-Vybouchl.html
+++ b/Maniak-Vybouchl.html
@@ -12,7 +12,7 @@
             font-family: 'Dosis', sans-serif;
             margin: 0;
             padding: 0;
-            background: url(https://myblogsy.github.io/main/cdn/maniak-vybuch.jpg') no-repeat center center fixed;
+            background: url(https://myblogsy.github.io/cdn/maniak-vybuch.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white; /* Text color set to white */
             font-weight: bold; /* All text made bold */
@@ -34,7 +34,7 @@
             left: 0;
             width: 100%;
             height: 110%;
-            background: url('https://myblogsy.github.io/main/cdn/maniak-background.jpg') no-repeat center center fixed;
+            background: url('https://myblogsy.github.io/cdn/maniak-background.jpg') no-repeat center center fixed;
             background-size: cover;
             filter: blur(10px); /* Apply blur effect to the background */
             z-index: 1; /* Behind the content */
