--- a/Maniak-Vybouchl.html
+++ b/Maniak-Vybouchl.html
@@ -12,7 +12,7 @@
             font-family: 'Dosis', sans-serif;
             margin: 0;
             padding: 0;
-            background: url(https://myblogsy.github.io/cdn/maniak-vybuch.jpg') no-repeat center center fixed;
+            background: url('https://myblogsy.github.io/cdn/maniak-vybuch.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white; /* Text color set to white */
             font-weight: bold; /* All text made bold */
